crates/vescpkg-rs/tests/ui/callback_traits_are_macro_only.stderr
error[E0432]: unresolved imports `vescpkg_rs::PackageAppDataCallback`, `vescpkg_rs::PackageCustomConfigCallback`, `vescpkg_rs::PackageImuReadCallback`
 --> tests/ui/callback_traits_are_macro_only.rs:2:5
  |
2 |     PackageAppDataCallback, PackageCustomConfigCallback, PackageImuReadCallback,
  |     ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^ no `PackageImuReadCallback` in the root
  |     |                       |
  |     |                       no `PackageCustomConfigCallback` in the root
  |     no `PackageAppDataCallback` in the root
  |
help: a similar name exists in the module
  |
2 -     PackageAppDataCallback, PackageCustomConfigCallback, PackageImuReadCallback,
2 +     PackageAppDataCallback, StatefulCustomConfigCallback, PackageImuReadCallback,
  |
