crates/vescpkg-rs/tests/ui/callback_traits_are_macro_only.rs
use vescpkg_rs::{
    PackageAppDataCallback, PackageCustomConfigCallback, PackageImuReadCallback,
};

fn main() {}
